update to 1.2.1 from ftp://ftp.secure-computing.net/pub/FreeBSD/ports/ssl-admin/ssl-admin-1.2.1.tar.xz

--- a/ssl-admin.conf
+++ b/ssl-admin.conf
@@ -14,7 +14,7 @@ $ENV{'KEY_CRL_LOC'} = "URI:http://CRL_URI";
 # Changing the following values has vast consequences. 
 # These values must match what's in your root CA certificate.
 
-$ENV{'KEY_COUNTRY'} = "COUNTRY";
+$ENV{'KEY_COUNTRY'} = "XX";
 $ENV{'KEY_PROVINCE'} = "STATE/PROVINCE";
 $ENV{'KEY_CITY'} = "CITY";
 $ENV{'KEY_ORG'} = "ORGANIZATION";
