--- a/Makefile.freebsd
+++ b/Makefile.freebsd
@@ -1,27 +1,30 @@
-# Ports collection makefile for:	ssl-admin
-# Date created:				Thu Jan 14 09:48:29 CST 2010
-# Whom:					Eric Crist <ecrist@secure-computing.net>
-#
-# $FreeBSD: ports/security/ssl-admin/Makefile,v 1.4 2008/07/27 19:05:31 beech Exp $
-#
+# Created by: Eric Crist <ecrist@secure-computing.net>
+# $FreeBSD: head/security/ssl-admin/Makefile 412349 2016-04-01 14:25:16Z mat $
 
 PORTNAME=	ssl-admin
-DISTVERSION=	1.0.3
+DISTVERSION=	1.2.1
 CATEGORIES=	security
-MASTER_SITES=	ftp://ftp.secure-computing.net/pub/FreeBSD/ports/ssl-admin/
+MASTER_SITES=	ftp://ftp.secure-computing.net/pub/FreeBSD/ports/ssl-admin/ \
+		ftp://ftp2.secure-computing.net/pub/FreeBSD/ports/ssl-admin/
 
 MAINTAINER=	ecrist@secure-computing.net
-COMMENT=	OpenSSL certificate manager with OpenVPN support.
+COMMENT=	OpenSSL certificate manager with OpenVPN support
 
-RUN_DEPENDS=	unzip:${PORTSDIR}/archivers/zip \
-		zip:${PORTSDIR}/archivers/unzip
+LICENSE=	BSD3CLAUSE
 
-USE_PERL5_RUN=	YES
-MAN1=		ssl-admin.1
-MAN5=		ssl-admin.conf.5
+RUN_DEPENDS=	zip:archivers/zip
+
+USES=		perl5 shebangfix tar:xz
+SHEBANG_FILES=	ssl-admin
+USE_PERL5=	run
+GNU_CONFIGURE=	yes
 SUB_FILES=	pkg-message
+MAKE_ENV=	ETCDIR=${PREFIX}/etc BINDIR=${PREFIX}/bin \
+		MANDIR=${MANPREFIX}/man
+NO_ARCH=	yes
 
-post-install:
-	${CAT} ${PKGMESSAGE}
+post-patch:
+	${REINPLACE_CMD} -e 's|`which sed`|${SED}|' ${WRKSRC}/configure
+	${REINPLACE_CMD} -e 's|{DESTDIR}/|{DESTDIR}|g' ${WRKSRC}/Makefile
 
 .include <bsd.port.mk>
